src/objects/ServiceContract/fields/CH_CDB_Region__c.field-meta.xml
<CustomField>
    <fullName>CH_CDB_Region__c</fullName>
    <description>CDB Region</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CDB Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>