src/objects/ServiceContract/fields/CH_PriceBook__c.field-meta.xml
<CustomField>
    <fullName>CH_PriceBook__c</fullName>
    <description>Not show in UI. Needed for Entitlement Process mapping, which requires product to exist in default Price Book (as Price Book Entry)</description>
    <label>Price Book</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nokia CARE Price Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>