src/objects/ServiceContract/fields/CH_RenegotiationStartDate__c.field-meta.xml
<CustomField>
    <fullName>CH_RenegotiationStartDate__c</fullName>
    <description>NOKIASC-30996</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renegotiation Start Date</label>
    <type>Date</type>
</CustomField>