src/objects/ServiceContract/fields/CH_ServiceContractType__c.field-meta.xml
<CustomField>
    <fullName>CH_ServiceContractType__c</fullName>
    <description>Service Contract Type</description>
    <label>Service Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Contract</fullName>
            </value>
            <value>
                <fullName>Vendor Contract</fullName>
            </value>
            <value>
                <fullName>Internal Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>