src/objects/ServiceContract/fields/GDMFS_PO_Number_Reactive_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFS_PO_Number_Reactive_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Number required for Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>