src/objects/ServiceContract/fields/GDMFSL_24HrCoverage_BusinessDays__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_24HrCoverage_BusinessDays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>..</description>
    <label>24 hour Reactive Coverage Business Days</label>
    <type>Checkbox</type>
</CustomField>