src/objects/ServiceContract/fields/GDMFSL_Actual_Time_Consumed_BF_Hours__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Actual_Time_Consumed_BF_Hours__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Actual Time Consumed BF (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>