src/objects/ServiceContract/fields/GDMFSL_Agreement_Level__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Agreement_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Level</label>
    <referenceTo>GDMFSL_Agreement_Level__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>