src/objects/ServiceContract/fields/GDMFSL_ATS_BreakFix_Hours__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_ATS_BreakFix_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ATS BreakFix (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>