src/objects/ServiceContract/fields/GDMFSL_Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be the Bill to Account (the same as the Bill to Account on the Sales Contract).</description>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>