src/objects/ServiceContract/fields/GDMFSL_Bill_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Bill_To_Account_Number__c</fullName>
    <label>Bill To SAP Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>