src/objects/ServiceContract/fields/GDMFSL_Bill_To_Source_System__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Bill_To_Source_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To SAP Source System</label>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Service Contracts (Bill To)</relationshipLabel>
    <relationshipName>ServiceContract_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>