src/objects/ServiceContract/fields/GDMFSL_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cancelled Service Contracts</description>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>