src/objects/ServiceContract/fields/GDMFSL_Connected_Digital_Services__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Connected_Digital_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Services - Connected Tech Sup</label>
    <type>Checkbox</type>
</CustomField>