src/objects/ServiceContract/fields/GDMFSL_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comprehensive Connected</fullName>
            </value>
            <value>
                <fullName>Comprehensive Non Connected</fullName>
            </value>
            <value>
                <fullName>HBS Warranty</fullName>
            </value>
            <value>
                <fullName>Men Onsite</fullName>
            </value>
            <value>
                <fullName>OEM Warranty</fullName>
            </value>
            <value>
                <fullName>PM Connected</fullName>
            </value>
            <value>
                <fullName>PM Non Connected</fullName>
            </value>
            <value>
                <fullName>T&amp;M Block of Hours</fullName>
            </value>
            <value>
                <fullName>Time and Material</fullName>
            </value>
            <value>
                <fullName>TRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>