src/objects/ServiceContract/fields/GDMFSL_DigitalServices_OTS__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_DigitalServices_OTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Services - Operational Tech Sup</label>
    <type>Checkbox</type>
</CustomField>