src/objects/ServiceContract/fields/GDMFSL_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>