src/objects/ServiceContract/fields/GDMFSL_Office_Hr_Reactive_Response__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Office_Hr_Reactive_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Hours Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>