src/objects/ServiceContract/fields/GDMFSL_Parts_Replacement_Management__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Parts_Replacement_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Replacement</label>
    <type>Checkbox</type>
</CustomField>