src/objects/ServiceContract/fields/GDMFSL_PartsReplacementManagement_L__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_PartsReplacementManagement_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Replacement – Limited</label>
    <type>Checkbox</type>
</CustomField>