src/objects/ServiceContract/fields/GDMFSL_PartsStockManagement__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_PartsStockManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Stock management</label>
    <type>Checkbox</type>
</CustomField>