src/objects/ServiceContract/fields/GDMFSL_Preventative_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Preventative_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preventative Maintenance</label>
    <type>Checkbox</type>
</CustomField>