src/objects/ServiceContract/fields/GDMFSL_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Profit_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profit Center</label>
    <referenceTo>GDMFSL_Profit_Center__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>