src/objects/ServiceContract/fields/GDMFSL_Reactive_Work_Not_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Reactive_Work_Not_Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactive Work is Not Chargeable</label>
    <type>Checkbox</type>
</CustomField>