src/objects/ServiceContract/fields/GDMFSL_Region__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Region__c</fullName>
    <description>This Field will be populated with the Region from the Sold To Account, and used in Sharing Rules for SC.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>