src/objects/ServiceContract/fields/GDMFSL_RemoteReactiveWork_Chargeable_L__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RemoteReactiveWork_Chargeable_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Reactive Work Chargeable Limited</label>
    <type>Checkbox</type>
</CustomField>