src/objects/ServiceContract/fields/GDMFSL_RemoteReactiveWork_NotChargeable__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RemoteReactiveWork_NotChargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Reactive Work is Not Chargeable</label>
    <type>Checkbox</type>
</CustomField>