src/objects/ServiceContract/fields/GDMFSL_RemoteSupport_AM__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RemoteSupport_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Support - Alarm Management</label>
    <type>Checkbox</type>
</CustomField>