src/objects/ServiceContract/fields/GDMFSL_RemoteSupport_BO__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RemoteSupport_BO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Support - Building Operations</label>
    <type>Checkbox</type>
</CustomField>