src/objects/ServiceContract/fields/GDMFSL_RemoteSupport_SH__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RemoteSupport_SH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Support - Software Hosting</label>
    <type>Checkbox</type>
</CustomField>