src/objects/ServiceContract/fields/GDMFSL_SC_Block__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_SC_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is true, the Service Contract is blocked. This value comes from SAP via integration.</description>
    <label>SC Block</label>
    <type>Checkbox</type>
</CustomField>