src/objects/ServiceContract/fields/GDMFSL_Site_Resident_Labour_Present__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Site_Resident_Labour_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Resident Labour Present</label>
    <type>Checkbox</type>
</CustomField>