src/objects/ServiceContract/fields/GDMFSL_SLA_Guarantee_w_Financial_Penalty__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_SLA_Guarantee_w_Financial_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Guarantee with Financial Penalty</label>
    <type>Checkbox</type>
</CustomField>