src/objects/ServiceContract/fields/GDMFSL_Software_Assurance__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Software_Assurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Services - Application SW Sup</label>
    <type>Checkbox</type>
</CustomField>