src/objects/ServiceContract/fields/GDMFSL_Sold_To_Source_System__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Sold_To_Source_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To SAP Source System</label>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Service Contracts (Sold To)</relationshipLabel>
    <relationshipName>ServiceContract_Sold_To</relationshipName>
    <type>Lookup</type>
</CustomField>