src/objects/ServiceContract/fields/GDMFSL_Tech_Phone_Support__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Tech_Phone_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Support - Phone</label>
    <type>Checkbox</type>
</CustomField>