src/objects/ServiceContract/fields/GDMFSL_Third_Party_Support__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Third_Party_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Support</label>
    <type>Checkbox</type>
</CustomField>