src/objects/ServiceContract/fields/GDMFSL_Travel_Time_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Travel_Time_Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Time Chargeable</label>
    <type>Checkbox</type>
</CustomField>