src/objects/ServiceContract/fields/GDMFSL_Warranty_Services__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Warranty_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Services</label>
    <type>Checkbox</type>
</CustomField>