src/objects/ServiceContract/fields/GDMFSL_X24hr_Reactive_Response__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_X24hr_Reactive_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24 hour Reactive Coverage - 7 days/week</label>
    <type>Checkbox</type>
</CustomField>