src/objects/ServiceContract/fields/HWS_PONumber__c.field-meta.xml
<CustomField>
    <fullName>HWS_PONumber__c</fullName>
    <description>Created as part of Nokiasc-33919</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>