src/objects/ServiceContract/fields/HWS_SalesOrganisation__c.field-meta.xml
<CustomField>
    <fullName>HWS_SalesOrganisation__c</fullName>
    <description>to store the sales organisation value coming from CDB as part of US ES-100</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Organisation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>