src/objects/ServiceContract/fields/NCP_External_Service_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>NCP_External_Service_Contract_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Service Contract Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>