src/objects/ServiceContract/recordTypes/CH_ServiceContract.recordType-meta.xml
<RecordType>
    <fullName>CH_ServiceContract</fullName>
    <active>true</active>
    <description>CH Service Contract</description>
    <label>CARE Service Contract</label>
</RecordType>