src/objects/ServiceContract/recordTypes/CH_VendorContract.recordType-meta.xml
<RecordType>
    <fullName>CH_VendorContract</fullName>
    <active>true</active>
    <description>CH 3rd Party Vendor Service Contract</description>
    <label>Vendor Contract</label>
</RecordType>