src/objects/ServiceContract/recordTypes/NCP_Child_Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>NCP_Child_Service_Contract</fullName>
    <active>true</active>
    <description>Child Service Contract for Customer Community</description>
    <label>Child Service Contract</label>
</RecordType>