src/objects/ServiceContract/recordTypes/NCP_Parent_Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>NCP_Parent_Service_Contract</fullName>
    <active>true</active>
    <description>Customer Community Parent Service Contract with Entitlements</description>
    <label>Parent Service Contract</label>
</RecordType>