src/objects/ServiceContract/recordTypes/Other_Services_Child_Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>Other_Services_Child_Service_Contract</fullName>
    <active>true</active>
    <label>Other Services-Child Service Contract</label>
</RecordType>