src/objects/ServiceContract/listViews/All_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Service_Contracts</fullName>
    <columns>GDMFSL_ERP_Contract_ID__c</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>GDMFSL_L1__c</columns>
    <columns>GDMFSL_Region__c</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CREATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Contracts</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>