src/objects/ServiceContract/listViews/CH_AllCAREServiceContracts.listView-meta.xml
<ListView>
    <fullName>CH_AllCAREServiceContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NCP_External_Status__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.CH_ServiceContract</value>
    </filters>
    <label>All CARE Service Contracts</label>
</ListView>