src/objects/ServiceContract/listViews/CH_MyCAREServiceContracts.listView-meta.xml
<ListView>
    <fullName>CH_MyCAREServiceContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NCP_External_Status__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.CH_ServiceContract</value>
    </filters>
    <label>My CARE Service Contracts</label>
</ListView>