src/objects/ServiceContract/listViews/GDMFSL_Active_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>GDMFSL_Active_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>GDMFSL_Region__c</columns>
    <columns>CREATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDMFSL_IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Service Contracts</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>