src/objects/ServiceContract/listViews/GDMFSL_Cancelled_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>GDMFSL_Cancelled_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>GDMFSL_Cancelled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cancelled Service Contracts</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>