src/objects/ServiceContract/listViews/GDMFSL_Interface_User_Created_SC.listView-meta.xml
<ListView>
    <fullName>GDMFSL_Interface_User_Created_SC</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.NAME</field>
        <operation>contains</operation>
        <value>interface</value>
    </filters>
    <label>Interface User Created SC</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>