src/objects/ServiceContract/listViews/Mobilization_Queue.listView-meta.xml
<ListView>
    <fullName>Mobilization_Queue</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>GDMFSL_ERP_Contract_ID__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>GDMFSL_Mobilization_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDMFSL_Mobilization_Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Mobilization Queue</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>