src/objects/ServiceContract/listViews/My_Account_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Account_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>GDMFSL_IsActive__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>GDMFSL_Bill_to_Account__c</columns>
    <columns>GDMFSL_Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Account Service Contracts</label>
    <sharedTo>
        <allCustomerPortalUsers/>
    </sharedTo>
</ListView>