src/objects/ServiceContract/listViews/My_Vendor_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Vendor_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CH_ServiceContractType__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CH_ServiceContractOwner__c</columns>
    <columns>CH_CountryName__c</columns>
    <columns>CH_VendorContractType__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CH_ServiceContractType__c</field>
        <operation>equals</operation>
        <value>Vendor Contract</value>
    </filters>
    <label>My Vendor Contracts</label>
</ListView>