src/objects/ServiceContract/listViews/Service_Contracts_for_DV_T.listView-meta.xml
<ListView>
    <fullName>Service_Contracts_for_DV_T</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CH_AccountReferentialId__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>NCP_External_Status__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.CH_ServiceContract</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Service Contracts for DV&amp;T</label>
    <sharedTo>
        <group>CH_DVT_Admin</group>
    </sharedTo>
</ListView>