src/objects/ServiceContract/listViews/Service_Contracts_History_for_DV_T.listView-meta.xml
<ListView>
    <fullName>Service_Contracts_History_for_DV_T</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CH_AccountReferentialId__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CH_CA_ServiceContract_Status__c</columns>
    <columns>NCP_External_Status__c</columns>
    <columns>CH_CDB_PreviousContractId__c</columns>
    <columns>CH_CDB_ContractId__c</columns>
    <columns>CH_CDB_FollowUpContractId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.CH_ServiceContract</value>
    </filters>
    <label>Service Contracts History for DV&amp;T</label>
    <sharedTo>
        <group>CH_DVT_Admin</group>
    </sharedTo>
</ListView>